--- a/src/routes/topicsExercises/topicExercises/topic-exercises.scss
+++ b/src/routes/topicsExercises/topicExercises/topic-exercises.scss
@@ -57,11 +57,12 @@
       var(--third-color)
     )
     5;
-    animation: fadeIn 1s ease-in-out forwards;
-    animation-delay: 3s;
+  opacity: 0;
+  animation: appear 1s ease-in-out forwards;
+  animation-delay: 3s;
 }
 
-@keyframes fadeIn {
+@keyframes appear {
   from {
     opacity: 0;
   }
@@ -71,14 +72,18 @@
 }
 
 .topic-description {
-  position: relative;
-  bottom: 70px;
-  left: 194px;
   font-size: 22px;
   font-weight: bolder;
+  margin-top: 15px;
+  opacity: 0;
+  animation: appear 1s ease-in-out forwards;
+  animation-delay: 3s;
 }
 .topic-description-mobile {
   font-size: 3vw;
   font-weight: bolder;
   margin: 1rem;
+  opacity: 0;
+  animation: appear 1s ease-in-out forwards;
+  animation-delay: 3s;
 }
