--- a/src/routes/topicsExercises/topics/topics.scss
+++ b/src/routes/topicsExercises/topics/topics.scss
@@ -38,6 +38,14 @@
     transform: translateY(0);
   }
 }
+@keyframes appear {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 
 .line {
   width: 0px;
@@ -50,7 +58,11 @@
       var(--third-color)
     )
     5;
+    opacity: 0;
+  animation: appear 1s ease-in-out forwards ;
+  animation-delay: 3s;
 }
+
 .topics-topic {
   display: flex;
   flex-direction: column;
