--- a/src/components/sideBar/side-bar.scss
+++ b/src/components/sideBar/side-bar.scss
@@ -1,7 +1,5 @@
-@use "../../app.scss";
-
 .sidebar {
-  width: app.$navbarwidth;
+  width: 175px;
   height: 100vh;
   box-shadow: 0 0 150px 0 rgba(0, 0, 0, 0.12), 0 2px 200px 0 rgba(0, 0, 0, 0.22);
   font-size: 20px;
