--- a/src/routes/topicsExercises/exerciseDetails/exercise-details.scss
+++ b/src/routes/topicsExercises/exerciseDetails/exercise-details.scss
@@ -8,7 +8,7 @@
 .html-css-editor-container {
   display: flex;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
 
   .editor-container {
     display: flex;
@@ -20,7 +20,7 @@
 
   .preview-container {
     width: 50%;
-    height: 100%;
+    min-height: 100vh;
     background-color: white;
 
     iframe {
@@ -35,7 +35,6 @@
     width: 50%;
     height: 100%;
     position: relative;
-
   }
   .resizer {
     width: 100%;
