--- a/src/components/codeEditor/code-editor.scss
+++ b/src/components/codeEditor/code-editor.scss
@@ -19,9 +19,9 @@
   border-radius: 4px;
   height: auto;
   width: fit-content;
-  display: flex;
+  /*  display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
   cursor: pointer;
   transition: 0.3s ease-in-out;
   font-size: 14px;
