--- a/src/routes/topicsExercises/exerciseDetails/exercise-details.scss
+++ b/src/routes/topicsExercises/exerciseDetails/exercise-details.scss
@@ -5,6 +5,7 @@
   font-size: 16px;
   font-weight: bolder;
 }
+
 .html-css-editor-container {
   display: flex;
   width: 100%;
@@ -29,6 +30,7 @@
       border: none;
     }
   }
+
   .html-css-editor {
     display: flex;
     flex-direction: column;
@@ -36,6 +38,7 @@
     height: 100%;
     position: relative;
   }
+
   .resizer {
     width: 100%;
     height: 10px;
@@ -43,8 +46,9 @@
     cursor: row-resize;
   }
 }
-.panel-label {
-  margin-left: 10%;
-  color: #dfbc67;
-  font-weight: 400;
+
+.modal-content {
+  color: #000;
+  font-size: 20px;
+  font-weight: 300;
 }
