--- a/src/components/themeButton/theme-button.scss
+++ b/src/components/themeButton/theme-button.scss
@@ -1,9 +1,10 @@
 @use "../../App.scss";
+
 .theme-label {
+  display: block;
+  position: relative;
   width: 80px;
   height: 35px;
-  position: relative;
-  display: block;
   background: #ebebeb;
   border-radius: 200px;
   box-shadow: inset 0px 5px 15px rgba(0, 0, 0, 0.4),
@@ -12,72 +13,95 @@
   transition: 0.3s;
   left: 20px;
   top: 30px;
+
+  &:after {
+    content: "";
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 15px;
+    height: 15px;
+    background: linear-gradient(180deg, #ffcc89, #d8860b);
+    border-radius: 180px;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+  }
+
+  &:active:after {
+    width: 60px;
+  }
+
+  svg {
+    position: absolute;
+    top: 40px;
+    width: 120px;
+    z-index: 100;
+    transition: 0.3s;
+
+    &.sun {
+      left: 40px;
+      fill: #fff;
+    }
+
+    &.moon {
+      left: 340px;
+      fill: #7e7e7e;
+    }
+  }
 }
-.theme-label:after {
-  content: "";
-  width: 15px;
-  height: 15px;
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  background: linear-gradient(180deg, #ffcc89, #d8860b);
-  border-radius: 180px;
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
-}
+
 .theme-container-toggle {
+  visibility: hidden;
   width: 0;
   height: 0;
-  visibility: hidden;
-}
-.theme-container-toggle:checked + .theme-label {
-  background: #242424;
-}
-.theme-container-toggle:checked + .theme-label:after {
-  left: 70px;
-  transform: translateX(-100%);
-  background: linear-gradient(180deg, #777, #3a3a3a);
-}
-.theme-label:active:after {
-  width: 60px;
-}
-.sidebar.false .theme-container .theme-label {
-	left: 5px;
-	width: 50px;
+
+  &:checked {
+    + .theme-label {
+      background: #242424;
+
+      &:after {
+        left: 70px;
+        background: linear-gradient(180deg, #777, #3a3a3a);
+        transform: translateX(-100%);
+      }
+
+      svg.sun {
+        fill: #7e7e7e;
+      }
+
+      svg.moon {
+        fill: #fff;
+      }
+    }
+
+    + .theme-label + .background {
+      background: #242424;
+    }
   }
-  .sidebar.false .theme-container .theme-container-toggle:checked + .theme-label:after {
-	  left: 40px;
+}
+
+.sidebar {
+  &.false {
+    .theme-container {
+      .theme-label {
+        left: 5px;
+        width: 50px;
+      }
+
+      .theme-container-toggle:checked {
+        + .theme-label:after {
+          left: 40px;
+        }
+      }
+    }
   }
+}
+
 .background {
+  position: absolute;
   width: 100vw;
   height: 100vh;
   background: #fff;
   z-index: -1;
-  position: absolute;
   transition: 0.3s;
-}
-.theme-container-toggle:checked + .theme-label + .background {
-  background: #242424;
-}
-.theme-label svg {
-  position: absolute;
-  width: 120px;
-  top: 40px;
-  z-index: 100;
-}
-.theme-label svg.sun {
-  left: 40px;
-  fill: #fff;
-  transition: 0.3s;
-}
-.theme-label svg.moon {
-  left: 340px;
-  fill: #7e7e7e;
-  transition: 0.3s;
-}
-.theme-container-toggle:checked + .theme-label svg.sun {
-  fill: #7e7e7e;
-}
-.theme-container-toggle:checked + .theme-label svg.moon {
-  fill: #fff;
 }
