--- a/src/App.scss
+++ b/src/App.scss
@@ -70,3 +70,10 @@ a {
   min-height: 100vh;
   background-color: var(--secondary-color);
 }
+@media screen and (max-width: 768px) {
+  * {
+    font-size: 14px;
+    scrollbar-width: thin;
+    scrollbar-color: var(--third-color) var(--secondary-color);
+  }
+}
