--- a/src/routes/topicsExercises/exerciseDetails/exercise-details.scss
+++ b/src/routes/topicsExercises/exerciseDetails/exercise-details.scss
@@ -11,6 +11,9 @@
   width: 100%;
   min-height: 100vh;
 
+  @media screen and (max-width: 768px) {
+    flex-direction: column;
+  }
   .editor-container {
     display: flex;
     flex-direction: column;
@@ -21,9 +24,11 @@
 
   .preview-container {
     width: 50%;
-    min-height: 100vh;
+    min-height: 90vh;
     background-color: white;
-
+    @media screen and (max-width: 768px) {
+      width: 100%;
+    }
     iframe {
       width: 100%;
       height: 100%;
@@ -37,6 +42,11 @@
     width: 50%;
     height: 100%;
     position: relative;
+  }
+  @media  screen and (max-width: 768px) {
+    .html-css-editor {
+      width: 100%;
+    }
   }
 
   .resizer {
