--- a/src/routes/topicsExercises/exerciseDetails/exercise-details.scss
+++ b/src/routes/topicsExercises/exerciseDetails/exercise-details.scss
@@ -79,6 +79,7 @@
   cursor: pointer;
   background: var(--third-color);
   color: var(--text-color);
+  border: 1px solid var(--third-color);
 }
 
 .btn.active {
@@ -93,6 +94,7 @@
 .btn:hover {
   background: var(--primary-color);
   color: var(--third-color);
+  border: 1px solid var(--third-color);
 }
 
 .see-more {
