--- a/src/components/sideBar/side-bar.scss
+++ b/src/components/sideBar/side-bar.scss
@@ -113,7 +113,9 @@
 .sidebar.false .profile-img {
   width: 35px;
   height: 35px;
+  border-radius: 50%;
 }
+
 .sidebar-navlink-icon {
   width: 20px;
 }
