--- a/src/components/themeButton/theme-button.scss
+++ b/src/components/themeButton/theme-button.scss
@@ -55,7 +55,7 @@
   height: 0;
 
   &:checked {
-    + .theme-label {
+    +.theme-label {
       background: #242424;
 
       &:after {
@@ -73,7 +73,7 @@
       }
     }
 
-    + .theme-label + .background {
+    +.theme-label+.background {
       background: #242424;
     }
   }
@@ -83,12 +83,13 @@
   &.false {
     .theme-container {
       .theme-label {
-        left: 5px;
+        left: 2px;
         width: 50px;
+        margin-top: 30px;
       }
 
       .theme-container-toggle:checked {
-        + .theme-label:after {
+        +.theme-label:after {
           left: 40px;
         }
       }
