--- a/src/routes/allBlog/all-blog.scss
+++ b/src/routes/allBlog/all-blog.scss
@@ -1,3 +1,7 @@
+.page-title {
+  font-size: 50px;
+}
+
 .main-card {
   position: relative;
   border-radius: 15px;
@@ -49,4 +53,32 @@
 .details:hover {
   background: var(--text-color);
   color: var(--primary-color);
+}
+
+
+@media only screen and (max-width: 1200px) {
+  .page-title {
+    font-size: 40px;
+  }
+
+}
+
+@media only screen and (max-width: 992px) {
+  .page-title {
+    font-size: 35px;
+  }
+
+}
+
+@media only screen and (max-width: 768px) {
+  .page-title {
+    font-size: 32px;
+  }
+
+}
+
+@media only screen and (max-width: 576px) {
+  .page-title {
+    font-size: 28px;
+  }
 }
