--- a/src/routes/home/home.scss
+++ b/src/routes/home/home.scss
@@ -1,5 +1,3 @@
-
-
 /* Style the hero section */
 .hero {
   background-position: center;
@@ -14,12 +12,16 @@
 }
 
 .hero-heading {
-  font-size: 6rem;
+  // font-size: 6rem;
   font-weight: bold;
   margin-bottom: 2rem;
   text-shadow: 0 0.2rem 0.2rem rgba(0, 0, 0, 0.4);
   opacity: 0;
   animation: fadeIn 3s ease-in-out forwards;
+}
+
+.hero-heading span span {
+  font-size: 60px;
 }
 
 .hero-button {
@@ -35,6 +37,7 @@
   cursor: pointer;
   transition: all 0.5s ease-in-out;
   animation: fadeUp 3s ease-in-out forwards;
+
   &:hover {
     background-color: var(--third-color);
     color: var(--text-hover-color);
@@ -47,6 +50,7 @@
     opacity: 0;
     transform: translateY(-2rem);
   }
+
   to {
     opacity: 1;
     transform: translateY(0);
@@ -58,6 +62,7 @@
     opacity: 0;
     transform: translateY(6rem);
   }
+
   to {
     opacity: 1;
     transform: translateY(0);
@@ -68,6 +73,7 @@
   display: inline-block;
   animation: topLetterFadeIn 0.5s ease-in-out forwards;
 }
+
 .hero-heading .bottom-animation {
   display: inline-block;
   animation: bottomLetterFadeIn 0.5s ease-in-out forwards;
@@ -146,16 +152,19 @@
     opacity: 0;
     transform: translateY(-5rem);
   }
+
   to {
     opacity: 1;
     transform: translateY(0);
   }
 }
+
 @keyframes bottomLetterFadeIn {
   from {
     opacity: 0;
     transform: translateY(5rem);
   }
+
   to {
     opacity: 1;
     transform: translateY(0);
@@ -168,3 +177,70 @@
   margin-bottom: 4rem;
 }
 
+@media only screen and (max-width: 1200px) {
+  .hero-heading span span {
+    font-size: 50px;
+  }
+
+  .hero-subheading {
+    font-size: 2rem;
+
+  }
+
+  .hero-button {
+    width: 220px;
+    height: 50px;
+    font-size: 25px;
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  .hero-heading span span {
+    font-size: 40px;
+  }
+
+  .hero-subheading {
+    font-size: 1.6rem;
+
+  }
+
+  .hero-button {
+    width: 200px;
+    height: 45px;
+    font-size: 22px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .hero-heading span span {
+    font-size: 35px;
+  }
+
+  .hero-subheading {
+    font-size: 1.6rem;
+
+  }
+
+  .hero-button {
+    width: 180px;
+    height: 40px;
+    font-size: 20px;
+  }
+}
+
+@media only screen and (max-width: 576px) {
+  .hero-heading span span {
+    font-size: 30px;
+  }
+
+  .hero-subheading {
+    font-size: 1.4rem;
+
+  }
+
+  .hero-button {
+    width: 160px;
+    height: 35px;
+    font-size: 18px;
+  }
+}
