--- a/src/routes/topicsExercises/topics/topics.scss
+++ b/src/routes/topicsExercises/topics/topics.scss
@@ -15,38 +15,39 @@
   border-radius: 50%;
   display: flex;
   align-items: center;
-  font-size: 28.8px;
+  font-size: 28px;
   justify-content: center;
   background-color: var(--primary-color);
   cursor: pointer;
   transition: all 0.5s ease-in-out;
   animation: fadeUp 1s ease-in-out forwards;
+
   &:hover {
     background-color: var(--third-color);
     color: var(--text-hover-color);
     box-shadow: 0 0.2rem 0.2rem var(--text-color);
   }
 }
-@media  screen and (max-width: 768px) {
-  .exercise {
-    font-size: 14px;
-  }
-}
+
+
 
 @keyframes fadeUp {
   from {
     opacity: 0;
     transform: translateY(6rem);
   }
+
   to {
     opacity: 1;
     transform: translateY(0);
   }
 }
+
 @keyframes appear {
   from {
     opacity: 0;
   }
+
   to {
     opacity: 1;
   }
@@ -57,14 +58,11 @@
   border: 1px solid var(--text-color);
   height: 50px;
   margin: 1rem;
-  border-image: linear-gradient(
-      to bottom,
+  border-image: linear-gradient(to bottom,
       var(--text-color) 50%,
-      var(--third-color)
-    )
-    5;
-    opacity: 0;
-  animation: appear 1s ease-in-out forwards ;
+      var(--third-color)) 5;
+  opacity: 0;
+  animation: appear 1s ease-in-out forwards;
   animation-delay: 3s;
 }
 
@@ -72,4 +70,28 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+@media screen and (max-width: 1200px) {
+  .exercise {
+    font-size: 24px;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .exercise {
+    font-size: 22px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .exercise {
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .exercise {
+    font-size: 16px;
+  }
 }
