--- a/src/components/sideBar/side-bar.scss
+++ b/src/components/sideBar/side-bar.scss
@@ -119,3 +119,11 @@
 .sidebar-navlink-icon {
   width: 20px;
 }
+
+@media only screen and (max-width: 576px) {
+  .sidebar.true {
+    position: fixed;
+    z-index: 99;
+  }
+
+}
