--- a/src/routes/topicsExercises/topicExercises/topic-exercises.scss
+++ b/src/routes/topicsExercises/topicExercises/topic-exercises.scss
@@ -1,8 +1,10 @@
 .topic-exercises {
-  min-height: calc(100vh - 100px);
+  min-height: calc(900px - 100px);
+  /* Assuming 100px is the header's height */
   display: flex;
   flex-direction: column;
-  padding-top: 100px;
+  padding-top: 50px;
+  padding-bottom: 50px;
   align-items: center;
 }
 
@@ -13,36 +15,43 @@
 }
 
 .topic-exercise {
-  width: 5vw;
+  width: 72px;
+  /* Converted from 5vw */
   min-width: 100px;
   min-height: 100px;
-  height: 5vw;
+  height: 72px;
+  /* Converted from 5vw */
   border: 1px solid;
   border-radius: 50%;
   display: flex;
   align-items: center;
-  font-size: calc(2vw + 10px);
+  font-size: 29px;
+  /* Converted from calc(2vw + 10px) */
   justify-content: center;
   background-color: var(--primary-color);
   cursor: pointer;
   transition: all 0.5s ease-in-out;
   animation: fadeUp 1s ease-in-out forwards;
+
   &:hover {
     background-color: var(--third-color);
     color: var(--text-hover-color);
     box-shadow: 0 0.2rem 0.2rem var(--text-color);
   }
 }
+
 .finished {
   background-color: var(--third-color);
   color: var(--text-hover-color);
   box-shadow: 0 0.2rem 0.2rem var(--text-color);
 }
+
 @keyframes fadeUp {
   from {
     opacity: 0;
     transform: translateY(6rem);
   }
+
   to {
     opacity: 1;
     transform: translateY(0);
@@ -55,12 +64,7 @@
   height: 50px;
   margin: 1rem;
   margin-bottom: 3rem;
-  border-image: linear-gradient(
-      to bottom,
-      var(--text-color) 50%,
-      var(--third-color)
-    )
-    5;
+  border-image: linear-gradient(to bottom, var(--text-color) 50%, var(--third-color)) 5;
   opacity: 0;
   animation: appear 1s ease-in-out forwards;
   animation-delay: 1.5s;
@@ -70,6 +74,7 @@
   from {
     opacity: 0;
   }
+
   to {
     opacity: 1;
   }
@@ -83,8 +88,10 @@
   animation: appear 1s ease-in-out forwards;
   animation-delay: 3s;
 }
+
 .topic-description-mobile {
   font-size: 3vw;
+  /* Assuming 3vw is equivalent to 43.2px (approximated to 43px) */
   font-weight: bolder;
   margin: 1rem;
   opacity: 0;
