--- a/src/routes/topicsExercises/topics/topics.scss
+++ b/src/routes/topicsExercises/topics/topics.scss
@@ -2,7 +2,8 @@
   min-height: calc(100vh - 100px);
   display: flex;
   flex-direction: column;
-  padding-top: 100px;
+  padding-top: 50px;
+  padding-bottom: 50px;
   align-items: center;
 }
 
@@ -13,6 +14,8 @@
   height: 30vw;
   border: 1px solid;
   border-radius: 50%;
+  padding: 20px;
+  text-align: center;
   display: flex;
   align-items: center;
   font-size: 28px;
@@ -73,25 +76,33 @@
 }
 
 @media screen and (max-width: 1200px) {
-  .exercise {
+
+  .exercise,
+  .exercise span {
     font-size: 24px;
   }
 }
 
 @media screen and (max-width: 992px) {
-  .exercise {
+
+  .exercise,
+  .exercise span {
     font-size: 22px;
   }
 }
 
 @media screen and (max-width: 768px) {
-  .exercise {
-    font-size: 18px;
+
+  .exercise,
+  .exercise span {
+    font-size: 20px;
   }
 }
 
 @media screen and (max-width: 576px) {
-  .exercise {
+
+  .exercise,
+  .exercise span {
     font-size: 16px;
   }
 }
