--- a/src/routes/topicsExercises/exerciseDetails/exercise-details.scss
+++ b/src/routes/topicsExercises/exerciseDetails/exercise-details.scss
@@ -1,65 +1,90 @@
-.html-css-editor-container {
+// // /* .html-css-editor-container */
+// .html-css-editor-container {
+//   display: flex;
+//   min-height: 100vh;
+// }
+
+// @media screen and (max-width: 768px) {
+//   .html-css-editor-container {
+//     flex-direction: column;
+//   }
+// }
+
+// /* .editor-container */
+// .editor-container {
+//   display: flex;
+//   flex-direction: column;
+//   width: 50%;
+//   height: 100%;
+//   border-right: 1px solid #333;
+// }
+
+// /* .preview-container */
+// .preview-container {
+//   width: 50%;
+//   min-height: 100vh;
+//   background-color: white;
+// }
+
+// @media screen and (max-width: 768px) {
+//   .preview-container {
+//     width: 100%;
+//   }
+// }
+
+// .preview-container iframe {
+//   width: 100%;
+//   height: 100%;
+//   border: none;
+// }
+
+// /* .html-css-editor */
+// .html-css-editor {
+//   display: flex;
+//   flex-direction: column;
+//   width: 50%;
+//   height: 100%;
+//   position: relative;
+// }
+
+// @media screen and (max-width: 768px) {
+//   .html-css-editor {
+//     width: 100%;
+//   }
+// }
+.editors-container {
   display: flex;
-  min-height: 100vh;
-
-  @media screen and (max-width: 768px) {
-    flex-direction: column;
-  }
-  .editor-container {
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    height: 100%;
-    border-right: 1px solid #333;
-  }
-
-  .preview-container {
-    width: 50%;
-    min-height: 100vh;
-    background-color: white;
-    @media screen and (max-width: 768px) {
-      width: 100%;
-    }
-    iframe {
-      width: 100%;
-      height: 100%;
-      border: none;
-    }
-  }
-
-  .html-css-editor {
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    height: 100%;
-    position: relative;
-  }
-  @media screen and (max-width: 768px) {
-    .html-css-editor {
-      width: 100%;
-    }
-  }
-
-  .resizer {
-    width: 100%;
-    height: 10px;
-    background-color: #ccc;
-    cursor: row-resize;
-  }
+  position: relative;
+  overflow-x: hidden; 
 }
 
+.editor {
+  flex-grow: 1;
+  box-sizing: border-box; /* ensure padding and border are included in total width */
+}
+
+.resizer {
+  flex-shrink: 0; /* ensure resizer doesn't shrink */
+  width: 10px;
+  height: 100px;
+  background-color: #ccc;
+  cursor: ew-resize;
+}
+
+/* .panel-label */
 .panel-label {
   color: var(--third-color);
-  margin-left: 8%;
   font-weight: 400;
 }
 
+/* .modal-content */
 .modal-content {
   color: #000;
   font-size: 20px;
   font-weight: 300;
 }
 
+/* .btn */
 .btn {
   font-size: 18px;
   font-weight: 400;
@@ -77,6 +102,7 @@
   background: var(--primary-color) !important;
   color: var(--third-color) !important;
 }
+
 [data-theme="dark"] .btn {
   background: var(--third-color);
   color: var(--primary-color);
@@ -88,6 +114,7 @@
   border: 1px solid var(--third-color);
 }
 
+/* .see-more */
 .see-more {
   font-size: 14px;
 }
