--- a/src/App.scss
+++ b/src/App.scss
@@ -15,6 +15,7 @@ html {
   --text-hover-color: #ffffff;
   --success-color: #198754;
   --error-color: #dc4c64;
+  --sidebar-color: #fff;
 }
 
 [data-theme="dark"] {
@@ -32,7 +33,8 @@ html {
   --text-hover-color: #212121;
   --success-color: #198754;
   --error-color: #dc4c64;
-  --editor-color: #ffffff
+  --editor-color: #ffffff;
+  --sidebar-color: #264653
 }
 
 * {
@@ -67,6 +69,7 @@ a {
   text-decoration: none;
   color: var(--text-color);
 }
+
 label {
   color: var(--third-color);
 }
