--- a/src/routes/topicsExercises/exerciseDetails/exercise-details.scss
+++ b/src/routes/topicsExercises/exerciseDetails/exercise-details.scss
@@ -5,6 +5,7 @@
   @media screen and (max-width: 768px) {
     flex-direction: column;
   }
+
   .editor-container {
     display: flex;
     flex-direction: column;
@@ -17,9 +18,11 @@
     width: 50%;
     min-height: 100vh;
     background-color: white;
+
     @media screen and (max-width: 768px) {
       width: 100%;
     }
+
     iframe {
       width: 100%;
       height: 100%;
@@ -34,9 +37,17 @@
     height: 100%;
     position: relative;
   }
+
+
+
   @media screen and (max-width: 768px) {
     .html-css-editor {
       width: 100%;
+    }
+
+    .exercise-description {
+      font-size: 18px;
+
     }
   }
 
@@ -77,6 +88,7 @@
   background: var(--primary-color) !important;
   color: var(--third-color) !important;
 }
+
 [data-theme="dark"] .btn {
   background: var(--third-color);
   color: var(--primary-color);
@@ -90,4 +102,19 @@
 
 .see-more {
   font-size: 14px;
+}
+
+.exercise-description {
+  display: block;
+  text-align: center;
+  color: var(--third-color);
+  font-size: 22px;
+  text-transform: capitalize;
+  padding: 20px;
+}
+
+@media screen and (max-width: 768px) {
+  .exercise-description {
+    font-size: 16px;
+  }
 }
