--- a/src/components/sideBar/side-bar.scss
+++ b/src/components/sideBar/side-bar.scss
@@ -1,11 +1,12 @@
 .sidebar {
-  width: 175px;
+  width: 135px;
   min-height: 100vh;
-  box-shadow: 0 0 150px 0 rgba(0, 0, 0, 0.12), 0 2px 200px 0 rgba(0, 0, 0, 0.22);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   font-size: 20px;
   font-weight: 400;
   color: var(--text-color);
   background-color: var(--primary-color);
+  flex-shrink: 0;
 }
 
 .sidebar-navlinks {
@@ -125,14 +126,12 @@
   left: 5%;
   top: 3%;
   cursor: pointer;
-
+  z-index: 5;
 }
 
 .menu-burger img {
   height: 35px;
 }
-
-
 
 @media only screen and (max-width: 768px) {
   .sidebar {
@@ -140,12 +139,10 @@
     transform: translateX(-145px);
     z-index: 100;
   }
-
 }
 
 .sidebar {
   background-color: var(--sidebar-color);
-
 }
 
 .activeSidebar {
