--- a/src/routes/topicsExercises/exerciseDetails/exercise-details.scss
+++ b/src/routes/topicsExercises/exerciseDetails/exercise-details.scss
@@ -68,3 +68,26 @@
 .see-more {
   font-size: 14px;
 }
+.description {
+  border: 1px solid var(--third-color);
+  border-radius: 10px;
+  padding: 20px 40px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  margin-bottom: 20px;
+  width: 50%;
+  margin-top: 40px;
+}
+@media screen and (max-width: 768px) {
+  .description {
+    padding: 10px 15px;
+    width: 80%;
+  }
+}
+.spinner {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
