Table Added in the dashboard

--- a/src/App.scss
+++ b/src/App.scss
@@ -109,3 +109,9 @@ label {
   padding: 4px 8px;
   border-radius: 10px;
 }
+table {
+  border-radius: 5px;
+  overflow: hidden;
+  text-align: center;
+  text-transform: capitalize;
+}
