--- a/src/components/sideBar/side-bar.scss
+++ b/src/components/sideBar/side-bar.scss
@@ -102,7 +102,7 @@
 }
 
 .profile-title {
-  font-size: 14px;
+  font-size: 16px;
   color: var(--text-color);
   font-weight: 400;
 }
@@ -147,4 +147,14 @@
 
 .activeSidebar {
   transform: translateX(0px);
+}
+.strike {
+  width: 20px;
+  height: 20px;
+  background-color: var(--third-color);
+  border-radius: 50%;
+  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
