--- a/src/components/sideBar/side-bar.scss
+++ b/src/components/sideBar/side-bar.scss
@@ -139,6 +139,10 @@
     transform: translateX(-160px);
     z-index: 100;
   }
+  .sidebar-navlinks {
+    overflow: auto;
+    height: 60vh;
+  }
 }
 
 .sidebar {
