--- a/src/App.scss
+++ b/src/App.scss
@@ -40,6 +40,7 @@ html {
   --modal-background-color: #264653;
   --modal-span-color: #e9c46a;
 }
+
 * {
   margin: 0;
   padding: 0;
@@ -90,6 +91,7 @@ label {
     scrollbar-color: var(--third-color) var(--secondary-color);
   }
 }
+
 .modal-content {
   background: var(--modal-background-color);
 }
@@ -109,17 +111,20 @@ label {
   padding: 4px 8px;
   border-radius: 10px;
 }
+
 .dashboard-table {
   border-radius: 5px;
   text-align: center;
   text-transform: capitalize;
   overflow: hidden;
 }
+
 .question-option {
   padding: 15px;
   border-radius: 10px;
   cursor: pointer;
 }
+
 .question-option .form-check-input {
   margin-left: 0;
   margin-right: 10px;
@@ -127,16 +132,26 @@ label {
 
 .StripeElement {
   box-sizing: border-box;
-  padding: 15px 14px; /* Increased padding for better spacing */
+  padding: 15px 14px;
+  /* Increased padding for better spacing */
   border: 1px solid #ced4da;
-  border-radius: 6px; /* A little more rounded */
+  border-radius: 6px;
+  /* A little more rounded */
   background-color: white;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1); /* Subtle shadow for elevation effect */
-  -webkit-transition: box-shadow 150ms ease, border-color 150ms ease; /* Added border transition */
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+  /* Subtle shadow for elevation effect */
+  -webkit-transition: box-shadow 150ms ease, border-color 150ms ease;
+  /* Added border transition */
   transition: box-shadow 150ms ease, border-color 150ms ease;
 }
 
 .StripeElement--focus {
-  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.15); /* A bit more pronounced shadow on focus */
-  border-color: #007bff; /* Highlight with a blue border when focused */
+  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.15);
+  /* A bit more pronounced shadow on focus */
+  border-color: #007bff;
+  /* Highlight with a blue border when focused */
+}
+
+.welcome_title {
+  text-align: center;
 }
